--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/css/main.css" rel="stylesheet" type="text/css" />
     <script
       src="https://unpkg.com/htmx.org@1.9.2"
       integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
@@ -29,118 +29,125 @@
       }
     </style>
   </head>
-  <body class="w-full">
-    <div class="navbar bg-base-300 w-full">
-      <button class="btn btn-ghost text-xl">Dish! Bash! Go!</button>
+  <body>
+    <div class="flex">
+      <div class="bg-base-300 w-full">
+        <span class="btn btn-ghost text-xl">
+          <img class="object-scale-down h-12" src="/static/hungry-cairn.png" />
+          Dish! Bash! Go!</span
+        >
+      </div>
     </div>
-    <div class="flex flex-col lg:flex-row p-4 w-2/3">
-      <div
-        class="grid flex-grow h-full card bg-base-300 p-4 rounded-box place-items-start"
-      >
-        <div class="flex flex-col w-full border-opacity-50">
-          <div
-            class="grid grid-cols-2 h-60 card bg-base-300 rounded-box place-items-start"
-          >
-            <div>
-              <h2 class="mb-3 text-3xl">Add Dish</h2>
+    <div class="flex mt-4 md:m-4">
+      <div class="md:w-1/3">
+        <div class="h-65 p-4 bg-base-300 flex rounded-box">
+          <div class="w-full md:w-2/3">
+            <h3 class="mb-3 text-3xl">Lisää ruoka</h3>
 
-              <form
-                hx-post="/dish"
-                hx-target="#dish-list"
-                hx-swap="afterbegin"
-                hx-disable-elt="this"
-                hx-indicator="#spinner"
-                class="space-y-3 w-full"
-              >
-                <div>
-                  <label
-                    for="dish-name"
-                    class="input input-bordered flex items-center gap-2"
-                    >Name
-                    <input
-                      type="text"
-                      name="name"
-                      id="dish-name"
-                      class="grow"
-                    />
-                  </label>
-                </div>
-                <div>
-                  <label
-                    for="dish-url"
-                    class="input input-bordered flex items-center gap-2"
-                    >Url
-                    <input type="text" name="url" id="dish-url" class="grow" />
-                  </label>
-                </div>
-
-                <button
-                  class="btn btn-primary items-center text-center"
-                  hx-disabled-elt="this"
-                >
-                  <span
-                    class="my-indicator loading loading-ring loading-md"
-                    id="spinner"
-                    role="status"
-                    aria-hidden="true"
-                  ></span>
-
-                  Save
-                </button>
-              </form>
-            </div>
-            <div class="w-full flex flex-row justify-end">
+            <form
+              hx-post="/dish"
+              hx-target="#dish-list"
+              hx-swap="afterbegin"
+              hx-disable-elt="this"
+              hx-indicator="#spinner"
+              class="space-y-3 w-full"
+            >
               <div>
-                <img
-                  class="object-scale-down h-60"
-                  src="/static/hungry-cairn.png"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="divider"></div>
-          <div class="mb-2">
-            <div class="flex w-full">
-              <div
-                class="grid h-20 w-7/12 flex-grow card bg-base-300 rounded-box place-items-center"
-              >
                 <label
-                  class="input w-full input-bordered flex items-center gap-2 mb-4"
-                >
-                  <input
-                    type="search"
-                    name="search"
-                    class="grow"
-                    placeholder="Search"
-                    hx-post="/search"
-                    hx-trigger="input changed delay:500ms, search"
-                    hx-target="#dish-list"
-                    hx-indicator=".htmx-indicator"
-                  />
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 16 16"
-                    fill="currentColor"
-                    class="w-4 h-4 opacity-70"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
+                  for="dish-name"
+                  class="input input-bordered flex items-center gap-2"
+                  >Nimi
+                  <input type="text" name="name" id="dish-name" class="grow" />
                 </label>
               </div>
-              <div class="divider divider-horizontal">OR</div>
-              <div
-                class="grid h-20 flex-grow card bg-base-300 rounded-box place-items-left inline-block"
+              <div>
+                <label
+                  for="dish-url"
+                  class="input input-bordered flex items-center gap-2"
+                  >Osoite
+                  <input type="text" name="url" id="dish-url" class="grow" />
+                </label>
+              </div>
+
+              <button
+                class="btn btn-primary items-center text-center"
+                hx-disabled-elt="this"
               >
-                <button class="btn bg-slate-300 btn-sm">Show oldest</button>
-                <button class="btn bg-slate-300 btn-sm">Show least used</button>
+                <span
+                  class="my-indicator loading loading-ring loading-md"
+                  id="spinner"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
+                Tallenna
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="mb-2">
+          <div class="flex">
+            <div class="p-4 flex-grow">
+              <label class="input w-full input-bordered flex items-center">
+                <input
+                  type="search"
+                  name="search"
+                  class="grow"
+                  placeholder="Hae nimellä"
+                  hx-post="/search"
+                  hx-trigger="input changed delay:500ms, search"
+                  hx-target="#dish-list"
+                  hx-indicator=".htmx-indicator"
+                />
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  class="w-4 h-4 opacity-70"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </label>
+              <div class="mt-2">
+                <button
+                  hx-post="/sort?s=asc_lastusage"
+                  hx-target="#dish-list"
+                  class="btn bg-slate-300 btn-sm"
+                >
+                  Vanhimmat ensin
+                </button>
+                <button
+                  hx-post="/sort?s=desc_lastusage"
+                  hx-target="#dish-list"
+                  class="btn bg-slate-300 btn-sm"
+                >
+                  Uusimmat ensin
+                </button>
+                <button
+                  hx-post="/sort?s=asc_usedcount"
+                  hx-target="#dish-list"
+                  class="btn bg-slate-300 btn-sm"
+                >
+                  Vähiten käytetyt ensin
+                </button>
+                <button
+                  hx-post="/sort?s=desc_usedcount"
+                  hx-target="#dish-list"
+                  class="btn bg-slate-300 btn-sm"
+                >
+                  Eniten käytetyt ensin
+                </button>
               </div>
             </div>
           </div>
-          <div class="w-full">{{ template "dishes" . }}</div>
+        </div>
+        <div class="w-full p-4">
+          <div class="flex items-center sm:justify-center ml-4 sm:ml-0">
+            {{ template "dishes" . }}
+          </div>
         </div>
       </div>
     </div>
