--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dish!Bash!Go! by Hungry Cairn</title>
+    <title>Dish! Bash! Go! by Hungry Cairn</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
       rel="stylesheet"
@@ -13,8 +13,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="/css/main.css" rel="stylesheet" type="text/css" />
     <script
-      src="https://unpkg.com/htmx.org@1.9.2"
-      integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
+      src="https://unpkg.com/htmx.org@2.0.2"
+      integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ"
       crossorigin="anonymous"
     ></script>
     <style>
@@ -45,9 +45,11 @@
             <h3 class="mb-3 text-3xl">Lisää ruoka</h3>
 
             <form
+              method="POST"
               hx-post="/dish"
               hx-target="#dish-list"
               hx-swap="afterbegin"
+              hx-on::after-request="this.reset()"
               hx-disable-elt="this"
               hx-indicator="#spinner"
               class="space-y-3 w-full"
