--- a/dishes.html
+++ b/dishes.html
@@ -1,6 +1,6 @@
 {{ define "dishes" }}
 <table
-  class="border-separate border-spacing-y-2 text-sm"
+  class="border-separate border-spacing-y-2 text-sm w-full"
   id="dish-list"
   hx-target="closest tr"
   hx-swap="outerHTML swap:0.2s"
