Use trash can icon

--- a/dish-item.html
+++ b/dish-item.html
@@ -26,20 +26,7 @@
       class="btn btn-sm btn-square rounded-bl-none rounded-tl-none rounded-br-none btn-error absolute right-0 top-0"
       hx-delete="/dish/{{.Id}}"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M6 18L18 6M6 6l12 12"
-        />
-      </svg>
+      <img class="w-4 h-4 fill-white" src="/static/trash.svg" />
     </button>
   </td>
 
